--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "mssql": "^11.0.1",
     "sequelize": "^6.37.7",
     "tedious": "^18.6.1",
-    "yup": "^1.7.0"
+    "yup": "^1.7.0",
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
